fix(QPagination): input alignment

--- a/src/components/pagination/pagination.ios.styl
+++ b/src/components/pagination/pagination.ios.styl
@@ -1,6 +1,7 @@
 .q-pagination
   input
     text-align center
+    margin-bottom -8px
   .q-btn
     padding 0 5px !important
     &.disabled
